# babiano

./: Cargo.toml  dev.sh  export.sh  export_singlepage.sh
.cargo/: config.toml
public/assets/: attributions.txt
public/css/: baba.css
src/: app.rs  key.rs  key_audio.rs  lib.rs  main.rs  piano.rs
static/css/: baba.css
