[package]
name = "babiano"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.1", features = [ "hydration" ] }
leptos_meta = { version = "0.8.1" }
leptos_axum = { version = "0.8.1", optional = true }
leptos_router = { version = "0.8.1" }
tokio = { version = "1.39", features = [
  "fs",
  "rt-multi-thread",
  "macros",
], optional = true }
log = "0.4.29"
wasm-bindgen = "0.2.106"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = { version = "0.4.0", optional = true }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "AudioContext",
    "AudioBufferSourceNode",
    "AudioBuffer",
    "GainNode",
    "AudioDestinationNode",
    "OscillatorNode",
    "AudioParam",
    "FileList",
    "File"
]
optional = true

[features]
hydrate = ["leptos/hydrate", "web-sys", "wasm-bindgen-futures"]
export = [
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "leptos_router/ssr",
]

[profile.release]
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.cargo-all-features]
denylist = ["tokio", "leptos_axum"]
skip_feature_sets = [["export", "hydrate"], []]

[package.metadata.leptos]
output-name = "babiano"
site-root = "dist"
site-pkg-dir = "pkg"
assets-dir = "public"

site-addr = "127.0.0.1:3007"
reload-port = 3001

browserquery = "defaults"

watch = false
env = "DEV"

bin-features = ["export"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
